--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ I have experience  creating single-page application by utililizing <span>   thir
 <!--=======================================================================-->
 
     <!-- Script File -->
-    <!-- <script src="JS/jquery-3.5.1.min.js"></script> -->
+     <script src="JS/jquery-3.5.1.min.js"></script> 
     <script src="JS/aos.js"></script>
     <script src="JS/Portfolio.js"></script>
     <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
