--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
+<!DOCTYPE html  loading='fast'>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <script src="js/jquery-3.5.1.min.js"></script> -->
-     <!-- <script src="Js/jquery-3.6.0.min.js.download"></script>-->
-        <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->       
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">     
               
         <link rel="stylesheet" href="css/Portfolio.css">
         <link rel="stylesheet" href="css/aos.css">
@@ -60,7 +57,7 @@
                     </div>
                     <div class="image aos-init aos-animate"  data-aos="fade-down"  data-aos-duration="2000">
                         <!-- <img src="Jpg/perfil.png" alt="" > -->
-                        <img src="Jpg/lastone.jpg" alt="">
+                       <!-- <img src="Jpg/lastone.jpg" alt="">-->
 </BR>  </BR>  
 
                         <SPAN  class="social-icon"  style="border-radius: 100px;  padding:10px;  border:1px solid #000; width:100px;"  TITLE="linkedin">  <a href=" https://www.linkedin.com/in/amr-hassan-617484166 "> IN </a>    </SPAN>&nbsp; &nbsp;
