--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 
-<body data-aos-easing="ease" data-aos-duration="100" data-aos-delay="0">
+<body>
    
         <!--=========== HEADER =============-->
         
