--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 
-<body>
+<body data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
    
         <!--=========== HEADER =============-->
         
