--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div>
                     <div class="image aos-init aos-animate"  data-aos="fade-down"  data-aos-duration="2000">
                         <!-- <img src="Jpg/perfil.png" alt="" > -->
-                       <!-- <img src="Jpg/lastone.jpg" alt="">-->
+                        <img src="Jpg/lastone.jpg" alt="">
 </BR>  </BR>  
 
                         <SPAN  class="social-icon"  style="border-radius: 100px;  padding:10px;  border:1px solid #000; width:100px;"  TITLE="linkedin">  <a href=" https://www.linkedin.com/in/amr-hassan-617484166 "> IN </a>    </SPAN>&nbsp; &nbsp;
