--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ I have experience  creating single-page application by utililizing <span>   thir
                     <div class="box aos-init" data-aos="flip-left" data-aos-duration="1000">
                         <div class="box-shape">1</div>
                         <div class="face one"   style="flex-wrap: wrap">  
-                            <div class="img"><img   src="http://egytra.com/Front/IMG/1704793454.svg"   height="150px"   style="object-fit: cover; "></div>
+                            <div class="img"><img   src="https://egytra.com/Front/IMG/1704793454.svg"   height="150px"   style="object-fit: cover; "></div>
                             <h2>Egytra</h2></div>
                         <div class="face two"> 
 <a href="https://www.egytra.com" target="blank">Visit</a></div>
@@ -249,7 +249,7 @@ I have experience  creating single-page application by utililizing <span>   thir
                     <div class="box aos-init" data-aos="flip-left" data-aos-duration="1000">
                         <div class="box-shape">2</div>
                         <div class="face one"  style="flex-wrap: wrap"> 
-                            <div class="img"><img   src="http://goodtours-int.com/Front/IMG/1707064708.png"   height="100px"   style="object-fit: cover; "></div>
+                            <div class="img"><img   src="https://goodtours-int.com/Front/IMG/1707064708.png"   height="100px"   style="object-fit: cover; "></div>
                             <h2 class="rest"></h2>Goodtours</h2></div>
                         <div class="face two"> 
 <a href="https://www.goodtours-int.com" target="_blank">Visit</a></div>
