--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ I have experience  creating single-page application by utililizing <span>   thir
                     </div>
                 </div>
                 <div class="bar">
-                    <div class="skill">Jquery</div>
+                    <div class="skill">JsFramework</div>
                     <div class="bar-outer">
                         <div class="speech-bubble jquery" style="display: block;">83%</div>
                         <div class="bar-inner jq" style="width: 83%;"></div>
@@ -201,7 +201,7 @@ I have experience  creating single-page application by utililizing <span>   thir
                                         <span><i class="fa fa-globe"></i></span>
                                     </div>
                                     <h3 class="title">Web Design</h3>
-                                    <p class="description">Using Open Source UI Tech  :- Html + css + js + Jquery + Bootsrap</p>
+                                    <p class="description">Using Open Source UI Tech  :- Html + css + js + Bootsrap</p>
                                 </div>
                             </div>
                             <div class="col-md-3 col-sm-6 aos-init" data-aos="fade-down" data-aos-duration="1000">
