--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ I have experience  creating single-page application by utililizing <span>   thir
                             <div class="col-md-3 col-sm-6 aos-init" data-aos="fade-up-right" data-aos-duration="1000">
                                 <div class="serviceBox main">
                                     <div class="service-icon">
-                                        <span><i class="fa fa-globe"></i></span>
+                                        <span><!--<i class="fa fa-globe"></i>--> 1</span>
                                     </div>
                                     <h3 class="title">Web Design</h3>
                                     <p class="description">Using Open Source UI Tech  :- Html + css + js + Bootsrap</p>
@@ -207,7 +207,7 @@ I have experience  creating single-page application by utililizing <span>   thir
                             <div class="col-md-3 col-sm-6 aos-init" data-aos="fade-down" data-aos-duration="1000">
                                 <div class="serviceBox blue">
                                     <div class="service-icon">
-                                        <span><i class="fa fa-rocket"></i></span>
+                                        <span><!--<i class="fa fa-rocket"></i>--> 2</span>
                                     </div>
                                     <h3 class="title">Web Development</h3>
                                     <p class="description">Using Open Source Backend End Tech :- PHP + MYSQL </p>
@@ -216,7 +216,7 @@ I have experience  creating single-page application by utililizing <span>   thir
                             <div class="col-md-3 col-sm-6 aos-init" data-aos="fade-up-left" data-aos-duration="1000">
                                 <div class="serviceBox purple">
                                     <div class="service-icon">
-                                        <span> <i class="fas fa-layer-group"></i></span>
+                                        <span> <!--<i class="fas fa-layer-group"></i>--> 3</span>
                                     </div>
                                     <h3 class="title">Graphic Design</h3>
                                     <p class="description">Design Brand Identity </p>
@@ -328,7 +328,7 @@ I have experience  creating single-page application by utililizing <span>   thir
     
 
 <!--?=========---Scroll-To-Top---==========================================-->
-<a id="button" class=""></a>
+<!--<a id="button" class=""></a>-->
 <!--=======================================================================-->
 
     <!-- Script File -->
