--- a/index.html
+++ b/index.html
@@ -2,7 +2,19 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"  loading='fast'>  
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">     
-              
+<script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+<script>
+  window.OneSignalDeferred = window.OneSignalDeferred || [];
+  OneSignalDeferred.push(async function(OneSignal) {
+    await OneSignal.init({
+      appId: "1d3962c8-ca97-4cc5-8b14-e17d50e38c02",
+      safari_web_id: "web.onesignal.auto.4cbbb6e8-691d-4369-88f4-1bdd9ac43935",
+      notifyButton: {
+        enable: true,
+      },
+    });
+  });
+</script>
         <link rel="stylesheet" href="css/Portfolio.css">
         <link rel="stylesheet" href="css/aos.css">
     <title>AmrGelno || profile</title>
