--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
                         <img src="Jpg/lastone.jpg" alt="">
 </BR>  </BR>  
 
+                        
                         <SPAN  class="social-icon"  style="border-radius: 100px;  padding:10px;  border:1px solid #000; width:100px;"  TITLE="linkedin">  <a href=" https://www.linkedin.com/in/amr-hassan-617484166 "> IN </a>    </SPAN>&nbsp; &nbsp;
-                        <SPAN  class="social-icon"   style="border-radius: 100px;    padding:10px;  border:1px solid #000;  width:100px;"  TITLE="GITHUB">  <a href=" https://www.github.com/amrgelno/webprotfolio "> GH</a>    </SPAN>
+                        <SPAN  class="social-icon"   style="border-radius: 100px;    padding:10px;  border:1px solid #000;  width:100px;"  TITLE="GITHUB">  <a href=" https://www.github.com/amrgelno"> GH</a>    </SPAN>
+ <SPAN  class="social-icon"   style="border-radius: 100px;    padding:10px;  border:1px solid #000;  width:100px;"  TITLE="GITHUB">  <a href="https://www.wa.com/+2001557562123"> wa </a>    </SPAN>
         
                     </div>
 
