--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                         <div style='margin:0 auto;'>
                         <SPAN  class="social-icon"  style="border-radius: 100px;  padding:10px;  border:1px solid #000; width:100px;"  TITLE="linkedin">  <a href="https://www.linkedin.com/in/amr-hassan-617484166 "> IN </a>    </SPAN>&nbsp; &nbsp;
                         <SPAN  class="social-icon"   style="border-radius: 100px;    padding:10px;  border:1px solid #000;  width:100px;"  TITLE="GITHUB">  <a href="https://www.github.com/amrgelno"> GH</a>    </SPAN>&nbsp; &nbsp;
- <SPAN  class="social-icon"   style="border-radius: 100px;    padding:10px;  border:1px solid #000;  width:100px;"  TITLE="GITHUB">  <a href="https://wa.me/+2001557562123"> wa </a>    </SPAN>&nbsp; &nbsp;
- <SPAN  class="social-icon"   style="border-radius: 100px;    padding:10px;  border:1px solid #000;  width:100px;"  TITLE="telegram">  <a href="https://t.me/+2001557562123"> ta </a>    </SPAN>
+ <SPAN  class="social-icon"   style="border-radius: 100px;    padding:10px;  border:1px solid #000;  width:100px;"  TITLE="GITHUB">  <a href="https://wa.me/+201557562123"> WA </a>    </SPAN>&nbsp; &nbsp;
+ <SPAN  class="social-icon"   style="border-radius: 100px;    padding:10px;  border:1px solid #000;  width:100px;"  TITLE="telegram">  <a href="https://t.me/+201557562123">  TA </a>    </SPAN>
         
                         </div> </div>    
 
