--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                         <SPAN  class="social-icon"  style="border-radius: 100px;  padding:10px;  border:1px solid #000; width:100px;"  TITLE="linkedin">  <a href="https://www.linkedin.com/in/amr-hassan-617484166 "> IN </a>    </SPAN>&nbsp; &nbsp;
                         <SPAN  class="social-icon"   style="border-radius: 100px;    padding:10px;  border:1px solid #000;  width:100px;"  TITLE="GITHUB">  <a href="https://www.github.com/amrgelno"> GH</a>    </SPAN>&nbsp; &nbsp;
  <SPAN  class="social-icon"   style="border-radius: 100px;    padding:10px;  border:1px solid #000;  width:100px;"  TITLE="GITHUB">  <a href="https://wa.me/+201557562123"> WA </a>    </SPAN>&nbsp; &nbsp;
- <SPAN  class="social-icon"   style="border-radius: 100px;    padding:10px;  border:1px solid #000;  width:100px;"  TITLE="telegram">  <a href="https://t.me/+201557562123">  TA </a>    </SPAN>
+ <SPAN  class="social-icon"   style="border-radius: 100px;    padding:10px;  border:1px solid #000;  width:100px;"  TITLE="telegram">  <a href="https://t.me/+201557562123">  TA </a>    </SPAN> <br/>
   <SPAN  class="social-icon"   style="border-radius: 100px;    padding:10px;  border:1px solid #000;  width:100px;"  TITLE="telegram">  <object data="Document_Name.pdf" type="application/pdf" width="100%" height="100%">
- <a href="JPg/Amrgelno-webdev-Atscv-3.pdf">click here to
+ <a href="Jpg/Amrgelno-webdev-Atscv-3.pdf">click here to
 download cv .</a>
 </object>      </SPAN>  
   
