--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <SPAN  class="social-icon"  style="border-radius: 100px;  padding:10px;  border:1px solid #000; width:100px;"  TITLE="linkedin">  <a href="https://www.linkedin.com/in/amr-hassan-617484166 "> IN </a>    </SPAN>&nbsp; &nbsp;
                         <SPAN  class="social-icon"   style="border-radius: 100px;    padding:10px;  border:1px solid #000;  width:100px;"  TITLE="GITHUB">  <a href="https://www.github.com/amrgelno"> GH</a>    </SPAN>&nbsp; &nbsp;
  <SPAN  class="social-icon"   style="border-radius: 100px;    padding:10px;  border:1px solid #000;  width:100px;"  TITLE="GITHUB">  <a href="https://wa.me/+201557562123"> WA </a>    </SPAN>&nbsp; &nbsp;
- <SPAN  class="social-icon"   style="border-radius: 100px;    padding:10px;  border:1px solid #000;  width:100px;"  TITLE="telegram">  <a href="https://t.me/+201557562123">  TA </a>    </SPAN> <br/>  <br/>
+ <SPAN  class="social-icon"   style="border-radius: 100px;    padding:10px;  border:1px solid #000;  width:100px;"  TITLE="telegram">  <a href="https://t.me/+201557562123">  TA </a>    </SPAN> <br/>  <br/>  <br/> 
   <SPAN  class="social-icon"   style="border-radius: 100px;    padding:10px;  border:1px solid #000;  width:100px;"  TITLE="telegram">  <object data="Document_Name.pdf" type="application/pdf" width="100%" height="100%">
  <a href="Jpg/Amrgelno-webdev-Atscv-3.pdf">click here to
 download cv .</a>
@@ -181,7 +181,13 @@ I have experience  creating single-page application by utililizing <span>   thir
                     </div>
                 </div>
 
-      
+         <div class="bar">
+                    <div class="skill">Seo on page</div>
+                    <div class="bar-outer">
+                        <div class="speech-bubble BootStrap" style="display: block;">85%</div>
+                        <div class="bar-inner BS" style="width: 85%;"></div>
+                    </div>
+                </div>
 
              <div class="bar">
                     <div class="skill">PHPMYSQL</div>
