--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ I have experience  creating single-page application by utililizing <span>   thir
                 </div>
 
          <div class="bar">
-                    <div class="skill">Seo on page</div>
+                    <div class="skill">Technical Seo </div>
                     <div class="bar-outer">
                         <div class="speech-bubble BootStrap" style="display: block;">85%</div>
                         <div class="bar-inner BS" style="width: 85%;"></div>
