--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ I have experience  creating single-page application by utililizing <span>   thir
 <a href="https://ziad-reda.com" target="blank">Visit</a></div>
                     </div>
 
-                <div class="work-content">
+                
                     <div class="box aos-init" data-aos="flip-left" data-aos-duration="1000">
                         <div class="box-shape">3</div>
                         <div class="face one"   style="flex-wrap: wrap">  
@@ -296,7 +296,7 @@ I have experience  creating single-page application by utililizing <span>   thir
                             <h2>Egytra</h2></div>
                         <div class="face two"> 
 <a href="https://www.egytra.com" target="blank">Visit</a></div>
-                    </div>
+                    </div></div>
                     <div class="box aos-init" data-aos="flip-left" data-aos-duration="1000">
                         <div class="box-shape">4</div>
                         <div class="face one"  style="flex-wrap: wrap"> 
