--- a/index.html
+++ b/index.html
@@ -296,7 +296,17 @@ I have experience  creating single-page application by utililizing <span>   thir
                             <h2>Egytra</h2></div>
                         <div class="face two"> 
 <a href="https://www.egytra.com" target="blank">Visit</a></div>
-                    </div></div>
+                    </div>  </div>
+
+
+
+
+
+ <div class="work-content">
+
+
+
+
                     <div class="box aos-init" data-aos="flip-left" data-aos-duration="1000">
                         <div class="box-shape">4</div>
                         <div class="face one"  style="flex-wrap: wrap"> 
