--- a/index.html
+++ b/index.html
@@ -282,10 +282,10 @@ I have experience  creating single-page application by utililizing <span>   thir
  <div class="box aos-init" data-aos="flip-left" data-aos-duration="1000">
                         <div class="box-shape">2</div>
                         <div class="face one"   style="flex-wrap: wrap">  
-                            <div class="img"><img   src="https://ziad-reda.com/assets/images/logoIcon/logo.png"   height="150px"   style="object-fit: cover; "></div>
-                            <h2>KHADAMAT</h2></div>
+                            <div class="img"><img   src="https://trippway.com/Front/IMG/1736928391.webp"   height="150px"   style="object-fit: cover; "></div>
+                            <h2>trippway</h2></div>
                         <div class="face two"> 
-<a href="https://ziad-reda.com" target="blank">Visit</a></div>
+<a href="https://trippway.com" target="blank">Visit</a></div>
                     </div>
 
                 
