--- a/index.html
+++ b/index.html
@@ -398,9 +398,9 @@ I have experience  creating single-page application by utililizing <span>   thir
 
 
 </body>    
-<link href="Front/JS/jquery-3.6.0.min.js" rel="preload"  fetchpriority='low'  >
-<link href="Front/JS/aos.js" rel="preload"  fetchpriority='low'  >
- <link href="Front/JS/Portfolio.js" rel="preload"  fetchpriority='low'  >      
+<link href="JS/jquery-3.6.0.min.js" rel="preload"  fetchpriority='low'  >
+<link href="JS/aos.js" rel="preload"  fetchpriority='low'  >
+ <link href="JS/Portfolio.js" rel="preload"  fetchpriority='low'  >      
     <script src="JS/jquery-3.6.0.min.js"></script>
     <script src="JS/aos.js"></script>
     <script src="JS/Portfolio.js"></script>
