--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html >
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"  amp>  
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">     
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+ <link href="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" rel="preconnect"  fetchpriority='high'  crossorigin >        
 <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
 <script>
   window.OneSignalDeferred = window.OneSignalDeferred || [];
@@ -398,10 +399,10 @@ I have experience  creating single-page application by utililizing <span>   thir
 
 
 </body>    
-<link href="JS/jquery-3.6.0.min.js" rel="preload"  fetchpriority='low'  >
-<link href="JS/aos.js" rel="preload"  fetchpriority='low'  >
- <link href="JS/Portfolio.js" rel="preload"  fetchpriority='low'  >      
-    <script src="JS/jquery-3.6.0.min.js"></script>
-    <script src="JS/aos.js"></script>
-    <script src="JS/Portfolio.js"></script>
+<link href="JS/jquery-3.6.0.min.js" rel="preload"  fetchpriority='high'  >
+<link href="JS/aos.js" rel="preload"  fetchpriority='high'  >
+ <link href="JS/Portfolio.js" rel="preload"  fetchpriority='high'  >      
+    <script src="JS/jquery-3.6.0.min.js"  async="true"></script>
+    <script src="JS/aos.js"  async="true"></script>
+    <script src="JS/Portfolio.js" defer></script>
     <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> --></html>
