--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
                     </div>
                     <div class="image aos-init aos-animate"  data-aos="fade-down"  data-aos-duration="2000">
                         <!-- <img src="Jpg/perfil.png" alt="" > -->
-                        <img src="Jpg/lastone.jpg" alt="">
+                        <img src="Jpg/lastone.jpg" alt="web_protfolio">
+
+                  <head> 
+                 <link rel="preload"   fetchpriority="high" as="image" :href="'Front/IMG/' + MinItem.ImageName"  type="image/webp">
+                  </head>
 </BR>  </BR>  
 
                         <div style='margin:0 auto;'>
