--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
                     <div class="image aos-init aos-animate"  data-aos="fade-down"  data-aos-duration="2000">
                         <!-- <img src="Jpg/perfil.png" alt="" > -->
-                        <img src="Jpg/lastone.jpg" alt="web_protfolio"  rel='preload' fetchpriority='high'>
+                        <img src="Jpg/lastone.webp" alt="web_protfolio"  rel='preload' fetchpriority='high'>
 
                   <head> 
                  <link rel="preload"   fetchpriority="high" as="image" :href="'Front/IMG/' + MinItem.ImageName"  type="image/webp">
@@ -112,7 +112,7 @@ download cv .</a>
                     <strong><h1>Ab<span>ou</span>t</h1></strong>
                 </div>
         <div class="about-content">    
-            <div class="image aos-init" data-aos="fade-right"><img src="Jpg/pic1kk.jpg" alt=""></div>
+            <div class="image aos-init" data-aos="fade-right"><img src="Jpg/pic1kk.webp" alt=""></div>
             <div class="text aos-init" data-aos="fade-left" data-aos-duration="1000">
 <h2>I’am AmrGelno</h2><br><p><span>Creating</span> 
 website layout/user interfaces by using Open source Tecno  practices.<br>
@@ -335,7 +335,7 @@ I have experience  creating single-page application by utililizing <span>   thir
                     <div class="box aos-init" data-aos="flip-left" data-aos-duration="1000">
                         <div class="box-shape">6</div>
                         <div class="face one"  style="flex-wrap: wrap">  
-                            <div class="img"><img   loading='lazy'  fetchpriority='low' src="Jpg/logo-second.282cbe56.png"   height="200px"   style="object-fit: cover; "></div>
+                            <div class="img"><img   loading='lazy'  fetchpriority='low' src="Jpg/logo-second.282cbe56.webp"   height="200px"   style="object-fit: cover; "></div>
                             <h2 class="rest"></h2>Designstore</h2></div>
                         <div class="face two"> 
 <a href="http://Designstore.eu5.net/" target="_blank">Visit</a></div>
