--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <img src="Jpg/lastone.webp" alt="web_protfolio"  rel='preload' fetchpriority='high'>
 
                   <head> 
-                 <link rel="preload"   fetchpriority="high" as="image" :href="'Front/IMG/' + MinItem.ImageName"  type="image/webp">
+                 <link rel="preload"   fetchpriority="high" as="image"  href="Jpg/lastone.webp"   type="image/webp">
                   </head>
 </BR>  </BR>  
 
@@ -267,7 +267,11 @@ I have experience  creating single-page application by utililizing <span>   thir
                             <div class="img"><img loading='lazy'  fetchpriority='low'   src="https://egyptpromixtravel.com/Front/IMG/1736928391.webp"   height="150px"   style="object-fit: cover; "></div>
                             <h2>EgyptpromixTravel</h2></div>
                         <div class="face two"> 
-<a href="https://egyptpromixtravel.com" target="blank">Visit</a></div>
+<a href="https://egyptpromixtravel.com" target="blank"><img src=''></a>                            
+<a href="https://egyptpromixtravel.com" target="blank">Visit</a>
+                        
+                        
+                        </div>
                     </div>
 
 
