--- a/index.html
+++ b/index.html
@@ -292,7 +292,10 @@ I have experience  creating single-page application by utililizing <span>   thir
                             <div class="img"><img   loading='lazy'  fetchpriority='low'  src="https://zphalltalhasa.com/Front/IMG/ZphaltLogo.svg"   height="150px"   style="object-fit: cover; "></div>
                             <h2>zphalltalhasa</h2></div>
                         <div class="face two"> 
-<a href="https://zphalltalhasa.com/" target="blank">Visit</a></div>
+<a href="https://zphalltalhasa.com/" target="blank"><img src='Jpg/Icon-domain.png' width='50px' height='50px'></a>                            
+<a href="https://pagespeed.web.dev/analysis/https-zphalltalhasa-com/lm44zqxujw?form_factor=desktop" target="blank">
+    <img src='Jpg/page_speed_2__.png' width='50px' height='50px'></a>
+                        </div>
                     </div>  </div>
 
 
