--- a/index.html
+++ b/index.html
@@ -270,9 +270,9 @@ I have experience  creating single-page application by utililizing <span>   thir
                         <div class="face two"> 
 
 
-                            <a href="https://egyptpromixtravel.com" target="blank"><img src='Jpg/Icon-domain.png' width='50px' height='50px'></a>                            
+                            <a href="https://egyptpromixtravel.com" target="blank"><img src='Jpg/Icon-domain.png' width='50px' height='50px'    title='website'></a>                            
 <a href="https://pagespeed.web.dev/analysis/https-egyptpromixtravel-com/e6lrfia4bb?form_factor=desktop" target="blank">
-    <img src='Jpg/page_speed_2__.png' width='50px' height='50px'></a>
+    <img src='Jpg/page_speed_2__.png' width='50px' height='50px' title='pagespeed'></a>
 
                             
 
@@ -291,8 +291,8 @@ I have experience  creating single-page application by utililizing <span>   thir
 
 
 
-                            <a href="https://trippway.com" target="blank"><img src='Jpg/Icon-domain.png' width='50px' height='50px'></a>                            
-<a href="https://pagespeed.web.dev/analysis/https-trippway-com/rddu6fv9um?form_factor=desktop" target="blank"><img src='Jpg/page_speed_2__.png' width='50px' height='50px'></a>
+                            <a href="https://trippway.com" target="blank"><img src='Jpg/Icon-domain.png' width='50px' height='50px' ></a>                            
+<a href="https://pagespeed.web.dev/analysis/https-trippway-com/rddu6fv9um?form_factor=desktop" target="blank"><img src='Jpg/page_speed_2__.png' width='50px' height='50px' ></a>
 </div>
                     </div>
 
