--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
  <a href="Jpg/europass - amr hassan Mid Level developer updated.pdf">click here to
 download cv .</a>
 </object>      </SPAN> 
+
+
+                                                   <SPAN  class="social-icon"   style="border-radius: 100px;    padding:10px;  border:1px solid #000;  width:100px;"  TITLE="cv">  <object data="Document_Name.pdf" type="application/pdf" width="100%" height="100%">
+ <a href="https://all-softwares.vercel.app/">All My Software Product</a>
+</object>      </SPAN> 
   
                         </div> </div>    
 
