--- a/index.html
+++ b/index.html
@@ -139,7 +139,16 @@ I have experience  creating single-page application by utililizing <span>   thir
 
             <div class="skills-content aos-init" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
 
-       <div class="bar">
+       <div class="bar">||
+
+                 <div class="skill">Web audit</div>
+                    <div class="bar-outer">
+                        <div class="speech-bubble BootStrap" style="display: block;">77%</div>
+                        <div class="bar-inner BS" style="width: 80%;"></div>
+                    </div>
+                </div>
+
+                
                     <div class="skill">UX Design</div>
                     <div class="bar-outer">
                         <div class="speech-bubble BootStrap" style="display: block;">77%</div>
