--- a/index.html
+++ b/index.html
@@ -370,9 +370,9 @@ I have experience  creating single-page application by utililizing <span>   thir
                         
                         </div>
                     </div>
+   </div>
 
-
-
+<div class="work-content">
                     <div class="box aos-init" data-aos="flip-left" data-aos-duration="1000">
                         <div class="box-shape">6</div>
                         <div class="face one"  style="flex-wrap: wrap">  
@@ -404,7 +404,7 @@ I have experience  creating single-page application by utililizing <span>   thir
                 <a href="http://trustklusbedrijf.nl/" target="_blank">Visit</a></div>
                     </div>
 
-
+  </div>
                     <div class="box aos-init" data-aos="flip-left" data-aos-duration="1000">
                         <div class="box-shape">9</div>
                         <div class="face one"  style="flex-wrap: wrap">  
@@ -414,7 +414,7 @@ I have experience  creating single-page application by utililizing <span>   thir
 <a href="https://quickinvoice.eu5.net/login.php" target="_blank">Visit</a></div>
                     </div>
                 
-  </div>
+
 
 
   <br/>     <br/>       <br/>  
