--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ I have experience  creating single-page application by utililizing <span>   thir
 
 <br/> <br/> <br/>
 
-
+ <div class="work-content">    </div>
 
  <div class="work-content">
 
@@ -370,7 +370,7 @@ I have experience  creating single-page application by utililizing <span>   thir
                         
                         </div>
                     </div>
-   </div>
+
 
 <div class="work-content">
                     <div class="box aos-init" data-aos="flip-left" data-aos-duration="1000">
