--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ I have experience  creating single-page application by utililizing <span>   thir
                             <a href="https://trippway.com" target="blank"><img src='Jpg/Icon-domain.png' width='50px' height='50px' ></a>                            
 <a href="https://pagespeed.web.dev/analysis/https-trippway-com/du3qgklyje?form_factor=desktop" target="blank"><img src='Jpg/page_speed_2__.png' width='50px' height='50px' ></a>
 </div>
-                    </div>  </div>
+                    </div>  
 
                 
                     <div class="box aos-init" data-aos="flip-left" data-aos-duration="1000">
