--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                         <SPAN  class="social-icon"   style="border-radius: 100px;    padding:10px;  border:1px solid #000;  width:100px;"  TITLE="cv">  <object data="Document_Name.pdf" type="application/pdf" width="100%" height="100%">
  <a href="https://drive.google.com/drive/folders/14_0DE44BGLrsNpT2_MQxkVRjkG6Q4dmX?dmr=1&ec=wgc-drive-globalnav-goto">click here to
 download cv .</a>
-</object>      </SPAN>    </BR>    </BR> 
+</object>      </SPAN>    </BR>    </BR>  </BR>
                                                    <SPAN  class="social-icon"   style="border-radius: 100px;    padding:10px;  border:1px solid #000;  width:100px;"  TITLE="cv">  <object data="Document_Name.pdf" type="application/pdf" width="100%" height="100%">
  <a href="https://all-softwares.vercel.app/">All My Software Product</a>
 </object>      </SPAN> 
