--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                     <div class="image aos-init aos-animate"  data-aos="fade-down"  data-aos-duration="2000">
                         <!-- <img src="Jpg/perfil.png" alt="" > -->
                         <img src="Jpg/lastone.webp" alt="web_protfolio"  rel='preload' fetchpriority='high'>
-
+                   
                   <head> 
                  <link rel="preload"   fetchpriority="high" as="image"  href="Jpg/lastone.webp"   type="image/webp">
-                  </head>
+                  </head>   </div>
 </BR>  
           
                         <div style='margin:0 auto;'>
