--- a/index.html
+++ b/index.html
@@ -102,7 +102,11 @@ download cv .</a>
                     <strong><h1>Ab<span>ou</span>t</h1></strong>
                 </div>
         <div class="about-content">    
-            <div class="image aos-init" data-aos="fade-right"><img src="Jpg/pic1kk.webp" alt=""></div>
+            <!--<div class="image aos-init" data-aos="fade-right"><img src="Jpg/pic1kk.webp" alt=""></div>-->
+            <iframe class='image aos-init lazyload' loading='lazy' fetchpriority='low' 
+                style='margin-top:20%' width="100%" height="658" 
+                src="https://www.youtube.com/watch?v=86Hw8ExHAjQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+</iframe>
             <div class="text aos-init" data-aos="fade-left" data-aos-duration="1000">
 <h2>I’am AmrGelno</h2><br><p><span>Creating</span> 
 website layout/user interfaces by using Open source Tecno  practices.<br>
