--- a/index.html
+++ b/index.html
@@ -133,6 +133,11 @@ I have experience  creating single-page application by utililizing <span>   thir
 </div>    
 
 
+<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380884509912829952?collapsed=1" height="521" width="504" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
+
+    
+
+
         <!--=========== SKILLS =============-->
 
 
