--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ download cv .</a>
         <div class="about-content">    
             <!--<div class="image aos-init" data-aos="fade-right"><img src="Jpg/pic1kk.webp" alt=""></div>-->
             <iframe class='image aos-init lazyload' loading='lazy' fetchpriority='low' 
-                style='margin-top:20%' width="100%" height="658" 
+                style='margin-top:20%' width="100%" height="521" 
                 src="https://www.youtube.com/embed/86Hw8ExHAjQ?si=UB0-0XxZaa9o1Dh2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
 </iframe>
             <div class="text aos-init" data-aos="fade-left" data-aos-duration="1000">
@@ -133,7 +133,6 @@ I have experience  creating single-page application by utililizing <span>   thir
 </div>    
 
 
-<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380884509912829952?collapsed=1" height="521" width="504" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
 
     
 
@@ -221,7 +220,12 @@ I have experience  creating single-page application by utililizing <span>   thir
         </div>
     </div>
 
-
+<!--=========== Linkedin =============-->
+<h1>My<span>po</span>sts</h1>
+ <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380884509912829952?collapsed=1" height="521" width="300" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
+<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380882708010414081?collapsed=1" height="521" width="300" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
+<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380878904540143616?collapsed=1" height="521" width="300" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
+ <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380877988885643264?collapsed=1" height="521" width="504" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
         <!--=========== SERVICES =============-->
         
         <div class="services" id="Services">
