--- a/index.html
+++ b/index.html
@@ -221,11 +221,12 @@ I have experience  creating single-page application by utililizing <span>   thir
     </div>
 
 <!--=========== Linkedin =============-->
-<h1>My<span>po</span>sts</h1>
+                <div class="special-heading aos-init" data-aos="fade-up" data-aos-duration="1500">
+<h1>My<span>po</span>sts</h1> </div>
  <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380884509912829952?collapsed=1" height="521" width="300" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
 <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380882708010414081?collapsed=1" height="521" width="300" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
 <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380878904540143616?collapsed=1" height="521" width="300" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
- <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380877988885643264?collapsed=1" height="521" width="504" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
+ <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380877988885643264?collapsed=1" height="521" width="300" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
         <!--=========== SERVICES =============-->
         
         <div class="services" id="Services">
