--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@ I have experience  creating single-page application by utililizing <span>   thir
 
 
 </body>    
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.3.2/lazysizes.min.js" async=""></script>
 <link href="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" rel="preconnect"  fetchpriority='high'  crossorigin >        
 <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
 <script>
