--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@ I have experience  creating single-page application by utililizing <span>   thir
 <!--=========== Linkedin =============-->
                 <div class="special-heading aos-init" data-aos="fade-up" data-aos-duration="1500">
 <h1>My<span>po</span>sts</h1> </div>
- <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380884509912829952?collapsed=1" height="521" width="300" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
-<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380882708010414081?collapsed=1" height="521" width="300" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
-<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380878904540143616?collapsed=1" height="521" width="300" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
- <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380877988885643264?collapsed=1" height="521" width="300" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
+ <iframe class='lazyload' src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380884509912829952?collapsed=1" height="521" width="300" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
+<iframe class='lazyload' src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380882708010414081?collapsed=1" height="521" width="300" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
+<iframe class='lazyload' src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380878904540143616?collapsed=1" height="521" width="300" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
+ <iframe class='lazyload' src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380877988885643264?collapsed=1" height="521" width="300" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
         <!--=========== SERVICES =============-->
         
         <div class="services" id="Services">
