--- a/index.html
+++ b/index.html
@@ -101,12 +101,10 @@ download cv .</a>
                 <div class="special-heading aos-init" data-aos="fade-up" data-aos-duration="1500">
                     <strong><h1>Ab<span>ou</span>t</h1></strong>
                 </div>
-        <div class="about-content">    
-            <!--<div class="image aos-init" data-aos="fade-right"><img src="Jpg/pic1kk.webp" alt=""></div>-->
-            <iframe class='image aos-init lazyloaded' loading='lazy' fetchpriority='low' 
-                style='margin-top:20%' width="100%" height="521" 
-                src="https://www.youtube.com/embed/86Hw8ExHAjQ?si=UB0-0XxZaa9o1Dh2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-</iframe>
+        <div class="about-content">   
+            
+           <div class="image aos-init" data-aos="fade-right"><img src="Jpg/pic1kk.webp" alt=""></div>
+     
             <div class="text aos-init" data-aos="fade-left" data-aos-duration="1000">
 <h2>I’am AmrGelno</h2><br><p><span>Creating</span> 
 website layout/user interfaces by using Open source Tecno  practices.<br>
