--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ download cv .</a>
                 </div>
         <div class="about-content">   
             
-           <div class="image aos-init" data-aos="fade-right"><img src="Jpg/pic1kk.webp" alt=""></div>
+           <div class="image aos-init" data-aos="fade-right"><img src="Jpg/pic1kk.webp" alt="pic1kk.webp" loading='eager'  rel='preload'></div>
      
             <div class="text aos-init" data-aos="fade-left" data-aos-duration="1000">
 <h2>I’am AmrGelno</h2><br><p><span>Creating</span> 
