--- a/index.html
+++ b/index.html
@@ -225,6 +225,8 @@ I have experience  creating single-page application by utililizing <span>   thir
 <iframe class='lazyloaded' loading='lazy' src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380882708010414081?collapsed=1" height="521" width="300" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
 <iframe class='lazyloaded' loading='lazy' src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380878904540143616?collapsed=1" height="521" width="300" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
  <iframe class='lazyloaded' loading='lazy' src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7380877988885643264?collapsed=1" height="521" width="300" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>
+ <iframe class='lazyloaded' loading='lazy' src="https://www.linkedin.com/embed/feed/update/urn:li:share:7380876526533357568?collapsed=1" height="521" width="300" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe> 
+ <iframe class='lazyloaded' loading='lazy' src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7388978264050077696?collapsed=1" height="848" width="504" frameborder="0" allowfullscreen="" title="منشور مضمن"></iframe>   
         <!--=========== SERVICES =============-->
         
         <div class="services" id="Services">
