--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </ul>
                 </nav>
                 <div class="burger">
-                    <div class="bar"></div>
+                    <div class="bar" style='background:unset;'></div>
                 </div>
             </div>
         </header>
