--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
          <p> </p>
       </div>
       <div class="work-content">
-         <div class="box aos-init" data-aos="flip-left" data-aos-duration="1000">
+         <div class="box aos-init " data-aos="flip-left" data-aos-duration="1000">
             <div class="box-shape">1</div>
             <div class="face one"   style="flex-wrap: wrap">
                <div class="img"><img loading='lazy'  fetchpriority='low'   src="https://egyptpromixtravel.com/Front/IMG/1736928391.webp"   height="150px"   style="object-fit: cover; "></div>
@@ -249,7 +249,7 @@
                <img src='Jpg/page_speed_2.png' width='50px' height='50px' title='pagespeed'></a>
             </div>
          </div>
-         <div class="box aos-init"  data-aos="flip-left"  data-aos-duration="1000">
+         <div class="box aos-init swiper-slide"  data-aos="flip-left"  data-aos-duration="1000">
             <div class="box-shape">2</div>
             <div class="face one"   style="flex-wrap: wrap">
                <div class="img">
